--- a/Client/Views/WindowBettor.xaml
+++ b/Client/Views/WindowBettor.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Client.Views.WindowAdd"
+﻿<Window x:Class="Client.Views.WindowBettor"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client.Views"
         mc:Ignorable="d"
-        Title="Neuer Nutzer" Height="300" Width="300">
-    <Grid>
+        Title="{Binding Title}" Width="300" Topmost="True" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" Height="187.356">
+	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="100" />
 			<ColumnDefinition />
@@ -22,21 +22,21 @@
 		<StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
 			<Label Content="Vorname:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 		</StackPanel>
-		<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" >
+		<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="0,0,10,0" >
 			<TextBox Text="{Binding Firstname}" Margin="0,5,5,5" Width="190" />
 		</StackPanel>
 
 		<StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
 			<Label Content="Nachname:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 		</StackPanel>
-		<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" >
+		<StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" Margin="0,0,10,0" >
 			<TextBox Text="{Binding Lastname}" Margin="0,5,5,5" Width="190" />
 		</StackPanel>
 
 		<StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
 			<Label Content="Username:" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
 		</StackPanel>
-		<StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" >
+		<StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" Margin="0,0,10,0" >
 			<TextBox Text="{Binding Nickname}" Margin="0,5,5,5" Width="190" />
 		</StackPanel>
 
