--- a/Client/Views/WindowEditMatch.xaml
+++ b/Client/Views/WindowEditMatch.xaml
@@ -1,29 +1,17 @@
-﻿<Window x:Class="Client.Views.WindowAddMatch"
+﻿<Window x:Class="Client.Views.WindowEditMatch"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client.Views"
         mc:Ignorable="d"
-        Title="WindowAddMatch" Height="287.056" Width="300">
+        Title="WindowEditMatch" Height="300" Width="300">
     <Grid>
 		<StackPanel Orientation="Vertical" DockPanel.Dock="Right" Margin="5">
-			<Label Content="Home Team:" />
-			<ComboBox Margin="0,0,0,5" ItemsSource="{Binding Teams}" SelectedItem="{Binding SelectedHomeTeam}">
-				<ComboBox.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Name}"/>
-					</DataTemplate>
-				</ComboBox.ItemTemplate>
-			</ComboBox>
-			<Label Content="Away Team:"/>
-			<ComboBox Margin="0,0,0,5" ItemsSource="{Binding Teams}" SelectedItem="{Binding SelectedAwayTeam}">
-				<ComboBox.ItemTemplate>
-					<DataTemplate>
-						<TextBlock Text="{Binding Name}"/>
-					</DataTemplate>
-				</ComboBox.ItemTemplate>
-			</ComboBox>
+			<Label Content="Home Team Score:" />
+			<TextBox Text="{Binding HomeTeamScore}" PreviewTextInput="NumberValidationTextBox" Width="50" HorizontalAlignment="Left" Margin="5,0,0,0"/>
+			<Label Content="Away Team Score:"/>
+			<TextBox Text="{Binding AwayTeamScore}" PreviewTextInput="NumberValidationTextBox" Width="50" HorizontalAlignment="Left" Margin="5,0,0,0"/>
 			<Label Content="Match Day:"/>
 			<TextBox Text="{Binding MatchDay}" PreviewTextInput="NumberValidationTextBox" Width="50" HorizontalAlignment="Left" Margin="5,0,0,0"/>
 			<DatePicker Margin="0,5,0,5" SelectedDate="{Binding DateTime}"/>
