--- a/TippspielClient/Views/MainWindow.xaml
+++ b/TippspielClient/Views/MainWindow.xaml
@@ -5,13 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TippspielClient.Views"
         mc:Ignorable="d"
-        Title="Tippspiel" Height="163" Width="300" ResizeMode="NoResize">
-    <Grid>
-		<StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Width="200">
-			<TextBox Height="23" TextWrapping="Wrap" Text="{Binding UserName}"  HorizontalContentAlignment="Center"/>
-			<Button Command="{Binding LoginCommand}" Content="Login" Width="100" Margin="0,10,0,0"/>
+        Title="{Binding NickName}" Height="500" Width="600">
+	<Grid>
+		<TabControl>
+			<TabItem Header="Tippverwaltung">
+				<StackPanel Orientation="Horizontal">
+					<DockPanel Width="300">
+						<Label Content="Saison:" DockPanel.Dock="Top"/>
+						<ComboBox x:Name="_seasons" ItemsSource="{Binding Seasons}" SelectedItem="{Binding SelectedSeason}" DockPanel.Dock="Top">
+							<ComboBox.ItemTemplate>
+								<DataTemplate>
+									<TextBlock Text="{Binding Name}"/>
+								</DataTemplate>
+							</ComboBox.ItemTemplate>
+						</ComboBox>
+						<Label Content="Spieltag:" DockPanel.Dock="Top"/>
+						<ComboBox x:Name="_matchdays" ItemsSource="{Binding MatchDays}" SelectedItem="{Binding SelectedMatchDay}" Margin="0,0,0,10" DockPanel.Dock="Top">
+							<ComboBox.ItemTemplate>
+								<DataTemplate>
+									<StackPanel Orientation="Horizontal">
+										<TextBlock Text="{Binding Day}" Margin="0,0,5,0"/>
+										<TextBlock Text="{Binding Date,StringFormat=d}" Margin="5,0,0,0"/>
+									</StackPanel>
+								</DataTemplate>
+							</ComboBox.ItemTemplate>
+						</ComboBox>
+						<ListView x:Name="_matches" ItemsSource="{Binding ElementName=_matchdays,Path=SelectedItem.Matches}" SelectedItem="{Binding SelectedMatch, Mode=OneWayToSource}" DockPanel.Dock="Top">
+							<ListView.ItemTemplate>
+								<DataTemplate>
+									<StackPanel Orientation="Vertical">
+										<StackPanel Orientation="Horizontal">
+											<Label Content="{Binding HomeTeamName}" FontSize="12" FontWeight="Bold"/>
+											<Label Content="vs" FontSize="12"/>
+											<Label Content="{Binding AwayTeamName}" FontSize="12" FontWeight="Bold"/>
+										</StackPanel>
+										<Label Content="{Binding Date,StringFormat=d}"/>
+									</StackPanel>
+								</DataTemplate>
+							</ListView.ItemTemplate>
+						</ListView>
+					</DockPanel>
+				</StackPanel>
+			</TabItem>
+			<TabItem Header="Saisonstabelle">
 
-
-		</StackPanel>
+			</TabItem>
+		</TabControl>
 	</Grid>
 </Window>
